[package]
name = "tensor-pyth"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.16"
solana-client = "1.16"
solana-program = "1.16"
pyth-sdk-solana = "0.10.4"
pyth-sdk = "0.8.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.0"
actix-cors= "0.6.4"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-actix-web = "0.2"
env_logger = "0.10"
thiserror = "1.0"
juniper = "0.15"
log = "0.4.22"